--- a/博客记事/完整搭建博客的记录/完整搭建博客的记录.md
+++ b/博客记事/完整搭建博客的记录/完整搭建博客的记录.md
@@ -5,4 +5,48 @@
 肯定不用静态博客，如果要用静态博客，直接github page或者gitee page 就完事了。
 
 动态博客，最著名最大的应该是WordPress,插件、主题都很多，功能十分丰富。然而乱花渐欲迷人眼，对小白不是很合适。
-Typecho 
+Typecho 轻量，主要支持写markdown的朋友们，主题支持也是相当棒的。我最终选择的也是这款。
+
+部署按照官网推荐即可。当然，我这里是直接用了腾讯云的镜像，开机即可用。
+
+## 主题选择
+我曾经推荐的是 Twenty Fourteen
+
+但是呢，与其他一些主题一样，它的文章宽度太小，支持的设置也很少，代码格式也不可以调整。
+
+现在已经切换到JOE，宽度很不错。我FORK后做了一点点小修改。https://gitee.com/wanglhup/Joe
+
+将其放到对应的themes目录中，在Typecho 后管中即可切换，无需重启。
+
+## 购买服务器
+购买服务器上，国内主要还是阿里云、腾讯云、华为云等等，国外的话选择较多，amazon，oracle，vultr等等。不过为了国内用户访问快速稳定，我选择了国内。（这是一条相对麻烦的方式）
+
+我以腾讯云为例，乘着活动购买2c4g5m配置的服务器。为了避免广告之嫌疑，我就不上什么链接了，其他厂商也很棒！
+
+## 购买域名、配置证书
+这里就需要注意了，如果在国外购买了域名，你是没这么容易解析到自己国内的服务器上的，因为国外购买域名可以不用备案。但是你配置解析到国内服务器时，会被对应的云厂商拦截。
+
+所以，我在购买一个之后，发现了这个问题。。。
+
+然后我就在腾讯云中再次购买了一个类似的域名，也就是现在的`wangpig.cn`。
+
+对于一个HTTPS协议来说，还是需要一个CA机构颁发的证书的，这些在腾讯云的引导下，也是可以在控制台完成的。
+
+如果是自己操作，就需要手动去申请CA证书，然后上传到服务器的目录之下，然后再修改nginx的配置，也并不难。
+
+## 域名备案、网站备案
+在域名解析验证通过后，没过多久，腾讯云又会拦截你。因为你网站也是需要备案的！
+这里我就不详细展开讲了，因为腾讯云文档已经足够的完善，引导的也很好。而且我这儿讲了，后续手续变化也是可能存在的。
+
+要说的就是，没有必要请什么备案管家，普通性质的网站备案并不麻烦。只要按照流程填写即可，仅需要注意的是，你的**备案网站名中不可以包含你的域名**。
+就因为这个被腾讯云发回过一次。
+
+之后就是腾讯云通过后，提交管局。这是一个漫长的过程，大概是真的和官网说的那样，10天左右。浙江这边备案完成，是会给你发短信提示的。
+
+## 公安备案
+在域名、网站备案完成后，腾讯云完成同步，此时你已经可以使用域名访问到你的主机了。但是他也会提醒你，需要在30日内在当地公安完成备案，这也不需要外出去备案，同样是网上完成。
+
+之后将备案号写在网站底部即可。
+
+## PS
+对于一个懂点linux的人来说，建站部署是比较轻松的，即使我不懂php和js。麻烦还是流程上的事。如果是国外的服务器与域名，大概1天就可以完成部署，再调整1-2天，博客就是你个人的模样了。
